--- a/about.html
+++ b/about.html
@@ -127,20 +127,13 @@
          
             </div>
             <p>
-              &lsquo;Hi there! I’m Lauren, a budding multidisciplinary designer
-              awaiting graduation from the IDEA School of Design at Capilano
-              University this spring. Focused on branding, packaging and
-              editorial design, and invariably drawn to intricately detailed
-              illustration, playful hand-lettering, and tender storytelling.
+              &lsquo;Hi there! I’m Lauren, a designer and illustrator awaiting graduation from the IDEA School of Design at Capilano University this spring. Focused on branding, packaging and editorial, and invariably drawn to intricately detailed illustration, playful hand-lettering, and tender storytelling.
               <br />
               <br />
-              I love going down rabbit holes in my sketchbook, crossing movies
-              off my watchlist, and convincing myself that the concert I just
-              spent half my grocery money on was worth it (it absolutely was).
+              Outside the artboard, you can find me down a sketchbook rabbit hole, crossing movies off my watchlist, or convincing myself that concert is worth the price (it absolutely is).
               <br />
               <br />
-              If you’re looking to collaborate or want to yap about movies and
-              music, let’s connect!
+              If you’re looking to collaborate or want to yap about movies and music, let’s connect!
             </p>
           </li>
           <li class="about-item-2">
