--- a/project-page-1 copy.html
+++ b/project-page-1 copy.html
@@ -6,9 +6,9 @@
       href="assets/branding-images/favicon.svg"
       type="image/svg+xml"
     />
-    <title>Lauren Howard | SunBud</title>
+    <title>Lauren Howard | Field Fable</title>
     <meta
-      name="Lauren Howard | SunBud"
+      name="Lauren Howard | Field Fable"
       content="Design work including branding, packaging, illustration, product design and more!"
     />
     <meta charset="utf-8" />
@@ -93,23 +93,72 @@
       </aside>
 
       <main class="work-wrapper">
+        <iframe
+          width="1272"
+          height="716"
+          src="https://www.youtube.com/embed/2Iqlv6YzE4A?playlist=2Iqlv6YzE4A&loop=1&autoplay=1&mute=1&rel=0&controls=0&fs=0&iv_load_policy=3"
+          frameborder="0"
+          allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+          allowfullscreen
+        >
+        </iframe>
+
+        <iframe
+          width="1272"
+          height="716"
+          src="https://www.youtube.com/embed/zgAAb0K1bmY?playlist=zgAAb0K1bmY&loop=1&autoplay=1&mute=1&rel=0&controls=0&fs=0&iv_load_policy=3"
+          frameborder="0"
+          allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+          allowfullscreen
+        >
+        </iframe>
+
+        <iframe
+          width="1272"
+          height="716"
+          src="https://www.youtube.com/embed/O4Wh86UwlSQ?playlist=O4Wh86UwlSQ&loop=1&autoplay=1&mute=1&rel=0&controls=0&fs=0&iv_load_policy=3"
+          frameborder="0"
+          allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+          allowfullscreen
+        >
+        </iframe>
+
+        <iframe
+          width="1272"
+          height="716"
+          src="https://www.youtube.com/embed/N_o0_nm_26s?playlist=N_o0_nm_26s&loop=1&autoplay=1&mute=1&rel=0&controls=0&fs=0&iv_load_policy=3"
+          frameborder="0"
+          allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+          allowfullscreen
+        >
+        </iframe>
+
+        <iframe
+          width="1272"
+          height="716"
+          src="https://www.youtube.com/embed/oTMMLe_QwaI?playlist=oTMMLe_QwaI&loop=1&autoplay=1&mute=1&rel=0&controls=0&fs=0&iv_load_policy=3"
+          frameborder="0"
+          allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+          allowfullscreen
+        >
+        </iframe>
+
         <div class="project">
           <div class="project-row">
             <div class="project-title">
-              <h1>SunBud</h1>
-              <h2>Branding / Interactive / Character Design</h2>
+              <h1>Field Fable</h1>
+              <h2>Branding / Packaging / Illustration</h2>
             </div>
             <div class="project-description">
               <p>
-                Many young adults in North America often neglect sun protection
-                either because they forget or it’s seemingly inconvenient and
-                uncool. This dramatically increases their risk of sun-related
-                health issues. Personifying the '90s into playful, helpful sunny
-                pals, SunBud makes daily sun protection more engaging for
-                Millennials and Gen Z. The personification evokes a relatable
-                nostalgia, as the buds do double duty in educating the target
-                while also encouraging positive sun protection habits and
-                keeping them accountable.
+                Field Fable tells a tale with every ale. The packaging
+                highlights each brew's unique flavour profile and the origins of
+                its locally sourced ingredients. The design draws inspiration
+                from timeless storybook illustration styles. Each label not only
+                showcases the rich ingredients but also features animals native
+                to the regions where they’re harvested. These animals, familiar
+                from classic fables, also offer a glimpse into the fable behind
+                each variety.
               </p>
             </div>
           </div>
@@ -120,8 +169,16 @@
             <li class="project-page-grid-item">
               <figure>
                 <img
-                  src="assets/project 6/lauren-howard-sunbud-meet-the-sunbuds-choose-your-character.jpg"
-                  alt="Choose your Sunbud!"
+                  src="assets/project-1/lauren-howard-field-fable-logo.jpg"
+                  alt="Field Fable logo."
+                />
+              </figure>
+            </li>
+            <li class="project-page-grid-item">
+              <figure>
+                <img
+                  src="assets/project-1/lauren-howard-field-fable-brand-colour-type-logo-varients.jpg"
+                  alt="Field Fable brief brand guide."
                 />
               </figure>
             </li>
@@ -130,8 +187,8 @@
             <li class="project-page-grid-item">
               <figure>
                 <img
-                  src="assets/project 6/lauren-howard-sunbud-colour-type.jpg"
-                  alt="Sunbud brand colours and type!"
+                  src="assets/project-1/lauren-howard-field-fable-pale-ale-packaging-design.jpg"
+                  alt="Field Fable logo design"
                 />
               </figure>
             </li>
@@ -140,8 +197,16 @@
             <li class="project-page-grid-item">
               <figure>
                 <img
-                  src="assets/project 6/lauren-howard-sunbud-sun-protection-app-onboarding.jpg"
-                  alt="Sunbud onboarding page."
+                  src="assets/project-1/lauren-howard-field-fable-pale-ale-illustration.jpg"
+                  alt="Huckleberry Sprucetip flavour varient spot illustration."
+                />
+              </figure>
+            </li>
+            <li class="project-page-grid-item">
+              <figure>
+                <img
+                  src="assets/project-1/lauren-howard-field-fable-bottle-neck.jpg"
+                  alt="Salmonberry Mint flavour varient spot illustration."
                 />
               </figure>
             </li>
@@ -150,8 +215,8 @@
             <li class="project-page-grid-item">
               <figure>
                 <img
-                  src="assets/project 6/lauren-howard-sunbud-sunprotection-tracker-page.jpg"
-                  alt="Track your sun protection."
+                  src="assets/project-1/lauren-howard-field-fable-growler-refill-tag.jpg"
+                  alt="Field Fable refillable growler design with growler tag."
                 />
               </figure>
             </li>
@@ -160,52 +225,16 @@
             <li class="project-page-grid-item">
               <figure>
                 <img
-                  src="assets/project 6/lauren-howard-sunbud-weather-page-forcast.jpg"
-                  alt="Choose your Sunbud!"
+                  src="assets/project-1/lauren-howard-field-fable-salmonberry-mint-spot-illustration.jpg"
+                  alt="Field Fable pale ale packaging design."
                 />
               </figure>
-            </li>
-          </ul>
-          <ul class="grid">
-            <li class="project-page-grid-item">
-              <figure>
-                <img
-                  src="assets/project 6/lauren-howard-sunbud-mini-game-icons-sunprotection.jpg"
-                  alt="Describe your project"
-                />
-              </figure>
-              <a href="project-2.html">
-                <div class="overlay">
-                  <h1 class="overlay-title">Stella</h1>
-                  <h4 class="overlay-description">
-                    Branding / Album Design / Merchandise
-                  </h4>
-                </div>
-              </a>
             </li>
             <li class="project-page-grid-item">
               <figure>
                 <img
-                  src="assets/project 6/lauren-howard-sunbud-character-design-varients.jpg"
-                  alt="Describe your project"
-                />
-              </figure>
-              <a href="project-3.html">
-                <div class="overlay">
-                  <h1 class="overlay-title">Dial</h1>
-                  <h4 class="overlay-description">
-                    Branding / Editorial / Social Media
-                  </h4>
-                </div>
-              </a>
-            </li>
-          </ul>
-          <ul class="grid">
-            <li class="project-page-grid-item">
-              <figure>
-                <img
-                  src="assets/project 6/lauren-howard-sunbud-mini-game-page-sunprotection.jpg"
-                  alt="Choose your Sunbud!"
+                  src="assets/project-1/lauren-howard-field-fable-blackberry-cedar-spot-illustration.jpg"
+                  alt="Field Fable pale ale packaging design."
                 />
               </figure>
             </li>
