added about content, fixed padding and sidebar

--- a/about.html
+++ b/about.html
@@ -123,23 +123,49 @@
             </p>
           </div>
           <h3>Contact</h3>
-          <p>hello@laurenhoward.ca</p>
-          <p>@laurenhowardart_</p>
+          <h4>hello@laurenhoward.ca</h4>
+          <h4>@laurenhowardart_</h4>
+
+          <h3>Services</h3>
+          <h4>Branding</h4>
+          <h4>Illustration</h4>
+          <h4>Packaging</h4>
+          <h4>Hand-lettering</h4>
+          <h4>Editorial Design</h4>
+
+          <h3>Experience</h3>
+          <h4>
+            Current - Illustration Contributor (On-call) | Capilano Courier
+          </h4>
+          <h4>
+            Current - Digital Studio Clerk (Auxiliary) | Burnaby Public Library
+          </h4>
+          <h4>Feb 2025-Mar 2025 - Practicum Designer | Thought Shop</h4>
+          <h4>Oct 2019–Sept 2024 - Page | Burnaby Public Library</h4>
+
+          <h3>Education</h3>
+          <h4>
+            2021-2025 - Bachelor of Design in Visual Communication | IDEA School
+            of Design
+          </h4>
+          <h4>2015-2020 - Highschool | Burnaby South Secondary School</h4>
+
           <h3>Featured In</h3>
-          <p>Capilano Courier</p>
-          <p>The Liar</p>
-          <p>SAPP Zine</p>
+          <h4>Capilano Courier</h4>
+          <h4>The Liar</h4>
+          <h4>SAPP Zine</h4>
         </li>
       </div>
     </div>
 
     <!-- Footer -->
     <footer class="global-footer">
-      <h5 class="copyright">
-        <a href="mailto:hello@laurenhoward.ca"
-          >Let's Connect! hello@laurenhoward.ca</a
-        >
-      </h5>
+      <h4 class="copyright">
+        <a href="mailto:hello@laurenhoward.ca">
+          Let's Connect! hello@laurenhoward.ca
+        </a>
+      </h4>
+
       <h5>&copy;2024-2025 Lauren Howard. All Rights Reserved.</h5>
     </footer>
   </body>
