Added next + previous project buttons and updated footer type

--- a/project-page-1 copy.html
+++ b/project-page-1 copy.html
@@ -245,13 +245,13 @@
     <!--footer-->
     <footer class="global-footer">
           
-      <h5 class="copyright">
-                <a href="mailto:hello@laurenhoward.ca">
-          Let's Connect! hello@laurenhoward.ca </a
-        >      
-      </h5>
+      <h3 class="copyright">
+        <a href="mailto:hello@laurenhoward.ca">
+          Let's Connect! hello@laurenhoward.ca
+        </a>
+      </h3>
 
-      <h5> &copy;2024-2025 Lauren Howard. All Rights Reserved.</h5>
+      <h4>&copy;2025-2026 Lauren Howard. All Rights Reserved.</h4>
     </footer>
   </body>
 </html>
