--- a/project-page-2.html
+++ b/project-page-2.html
@@ -123,19 +123,28 @@
               </figure>
             </li>
           </ul>
+
+          <ul class="portfolio-navigation">
+            <li class="previous-button">
+              <a href="project-page-1.html"> <h3>↙ Wag & Wander</h3> </a>
+            </li>
+            <li class="next-button">
+              <a href="project-page-3.html"> <h3>Field Fable ↘</h3> </a>
+            </li>
+          </ul>
         </section>
       </main>
     </div>
     <!--footer-->
     <footer class="global-footer">
           
-      <h5 class="copyright">
-                <a href="mailto:hello@laurenhoward.ca">
-          Let's Connect! hello@laurenhoward.ca </a
-        >      
-      </h5>
+      <h3 class="copyright">
+        <a href="mailto:hello@laurenhoward.ca">
+          Let's Connect! hello@laurenhoward.ca
+        </a>
+      </h3>
 
-      <h5> &copy;2024-2025 Lauren Howard. All Rights Reserved.</h5>
+      <h4>&copy;2025-2026 Lauren Howard. All Rights Reserved.</h4>
     </footer>
   </body>
 </html>
