--- a/project-page-4.html
+++ b/project-page-4.html
@@ -248,6 +248,15 @@
               </a>
             </li>
           </ul>
+
+          <ul class="portfolio-navigation">
+            <li class="previous-button">
+              <a href="project-page-3.html"> <h3>↙ Field Fable</h3> </a>
+            </li>
+            <li class="next-button">
+              <a href="project-page-5.html"> <h3>Stella ↘</h3> </a>
+            </li>
+          </ul>
         </section>
       </main>
     </div>
