changed about type styling

--- a/about.html
+++ b/about.html
@@ -61,31 +61,31 @@
 
         <ul class="socials-list">
           <li class="socials-item">
-            <h4>
+            <p>
               <a
                 href="https://www.linkedin.com/in/lauren-howard-b079b7229/#"
                 class="custom-navigation"
                 >LinkedIn</a
               >
-            </h4>
+            </p>
           </li>
           <li class="socials-item">
-            <h4>
+            <p>
               <a
                 href="https://www.behance.net/laurenhoward7#"
                 class="custom-navigation"
                 >Behance</a
               >
-            </h4>
+            </p>
           </li>
           <li class="socials-item">
-            <h4>
+            <p>
               <a
                 href="https://www.instagram.com/_laurenhowardart/#"
                 class="custom-navigation"
                 >Instagram</a
               >
-            </h4>
+            </p>
           </li>
         </ul>
       </aside>
@@ -103,12 +103,14 @@
           </div>
         </li>
         <li class="about-content-col">
-          <div class="about-title"><h1>Hi there!</h1></div>
+            <div class="about-title">
+              <h1>Nice to meet you!</h1>
+            </div>
+
           <div class="about-bio">
-            <p>
-              I’m Lauren, a multidisciplinary designer and illustrator awaiting
-              graduation from the IDEA School of Design at Capilano University
-              this spring. Focused on branding, packaging and editorial design,
+          
+              <p>  I’m Lauren, a multidisciplinary designer and illustrator based in Vancouver.
+              Focused on branding, packaging and editorial design,
               and invariably drawn to intricately detailed illustration, playful
               hand-lettering, and tender storytelling.
             </p>
@@ -117,43 +119,59 @@
               hole, crossing movies off my watchlist, or convincing myself that
               a concert is worth the price (it absolutely is).
             </p>
-            <p>
-              If you’re looking to collaborate or want to yap about movies and
-              music, let’s connect!
-            </p>
+            <br>
+            <div class="about-contact-list">
+              <h3> <a href="mailto:hello@laurenhoward.ca">
+                Let's chat! | hello@laurenhoward.ca
+              </a></h3></div>
+              <br>
+
+          <div class="about-content-list">
+            <h3>Services</h3>
+            <ul class="about-services-list">
+              <li><p>Branding</p></li>
+              <li><p>Illustration</p></li>
+              <li><p>Packaging</p></li>
+              <li><p>Hand-lettering</p></li>
+              <li><p>Editorial Design</p></li>
+            </ul>
           </div>
-          <h3>Contact</h3>
-          <h4>hello@laurenhoward.ca</h4>
-          <h4>@laurenhowardart_</h4>
 
-          <h3>Services</h3>
-          <h4>Branding</h4>
-          <h4>Illustration</h4>
-          <h4>Packaging</h4>
-          <h4>Hand-lettering</h4>
-          <h4>Editorial Design</h4>
+          <div class="about-content-list">
+            <h3>Experience</h3>
+            <ul>
+              <li>
+                <p>
+                  Illustration Contributor (On-call) | Capilano Courier<br />
+                  <h4>September 2021 - Present</h4>
+                </p>
+              </li>
+              <li>
+                <p>
+                  Digital Studio Clerk (On-call) | Burnaby Public Library<br />
+                  <h4>March 2024 - Present</h4>
+                </p>
+              </li>
+              <li>
+                <p>
+                  Practicum Designer | Thought Shop<br />
+                  <h4>Feburary 2025-March 2025</h4>
+                </p>
+              </li>
+            </ul>
+          </div>
 
-          <h3>Experience</h3>
-          <h4>
-            Current - Illustration Contributor (On-call) | Capilano Courier
-          </h4>
-          <h4>
-            Current - Digital Studio Clerk (Auxiliary) | Burnaby Public Library
-          </h4>
-          <h4>Feb 2025-Mar 2025 - Practicum Designer | Thought Shop</h4>
-          <h4>Oct 2019–Sept 2024 - Page | Burnaby Public Library</h4>
-
-          <h3>Education</h3>
-          <h4>
-            2021-2025 - Bachelor of Design in Visual Communication | IDEA School
-            of Design
-          </h4>
-          <h4>2015-2020 - Highschool | Burnaby South Secondary School</h4>
+            <div class="about-content-list">
+            <h3>Education</h3>
+            <ul>
+              <li><p>Bachelor of Design in Visual Communication | IDEA School of Design<br><h4>September 2021 - April 2025</h4></p></li>
+            </ul>
+          </div>
 
           <h3>Featured In</h3>
-          <h4>Capilano Courier</h4>
-          <h4>The Liar</h4>
-          <h4>SAPP Zine</h4>
+          <p>Capilano Courier</p>
+          <p>The Liar</p>
+          <p>SAPP Zine</p>
         </li>
       </div>
     </div>
