changes previous and next project type size and an image

--- a/project-page-1.html
+++ b/project-page-1.html
@@ -246,7 +246,7 @@
               <a href="project-previous.html"></a>
             </li>
             <li class="next-button">
-              <a href="project-page-2.html"> <h3>DIAL ↘</h3> </a>
+              <a href="project-page-2.html"> <p>DIAL ↘</p> </a>
             </li>
           </ul>
         </section>
