--- a/project-page-2.html
+++ b/project-page-2.html
@@ -126,10 +126,10 @@
 
           <ul class="portfolio-navigation">
             <li class="previous-button">
-              <a href="project-page-1.html"> <h3>↙ Wag & Wander</h3> </a>
+              <a href="project-page-1.html"> <p>↙ Wag & Wander</p> </a>
             </li>
             <li class="next-button">
-              <a href="project-page-3.html"> <h3>Field Fable ↘</h3> </a>
+              <a href="project-page-3.html"> <p>Field Fable ↘</p> </a>
             </li>
           </ul>
         </section>
