--- a/project-page-3.html
+++ b/project-page-3.html
@@ -119,7 +119,7 @@
             <li class="project-page-grid-item">
               <figure>
                 <img
-                  src="assets/project-1/lauren-howard-field-fable-logo.jpg"
+                  src="assets/project-1/lauren-howard-field-fable-logo.png"
                   alt="Field Fable logo."
                 />
               </figure>
@@ -192,10 +192,10 @@
 
           <ul class="portfolio-navigation">
             <li class="previous-button">
-              <a href="project-page-2.html"> <h3>↙ Dial</h3> </a>
+              <a href="project-page-2.html"> <p>↙ Dial</p> </a>
             </li>
             <li class="next-button">
-              <a href="project-page-4.html"> <h3>Thicket Co. ↘</h3> </a>
+              <a href="project-page-4.html"> <p>Thicket Co. ↘</p> </a>
             </li>
           </ul>
 
