--- a/project-page-4.html
+++ b/project-page-4.html
@@ -251,10 +251,10 @@
 
           <ul class="portfolio-navigation">
             <li class="previous-button">
-              <a href="project-page-3.html"> <h3>↙ Field Fable</h3> </a>
+              <a href="project-page-3.html"> <p>↙ Field Fable</p> </a>
             </li>
             <li class="next-button">
-              <a href="project-page-5.html"> <h3>Stella ↘</h3> </a>
+              <a href="project-page-5.html"> <p>Stella ↘</p> </a>
             </li>
           </ul>
         </section>
