--- a/project-page-5.html
+++ b/project-page-5.html
@@ -238,10 +238,10 @@
 
           <ul class="portfolio-navigation">
             <li class="previous-button">
-              <a href="project-page-4.html"> <h3>↙ Thicket Co.</h3> </a>
+              <a href="project-page-4.html"> <p>↙ Thicket Co.</p> </a>
             </li>
             <li class="next-button">
-              <a href="project-page-6.html"> <h3>Sunbud ↘</h3> </a>
+              <a href="project-page-6.html"> <p>Sunbud ↘</p> </a>
             </li>
           </ul>
         </section>
