--- a/project-page-6.html
+++ b/project-page-6.html
@@ -213,7 +213,7 @@
 
           <ul class="portfolio-navigation">
             <li class="previous-button">
-              <a href="project-page-5.html"> <h3>↙ Stella</h3> </a>
+              <a href="project-page-5.html"> <p>↙ Stella</p> </a>
             </li>
             <li class="next-button">
               <a href="project-page-1.html"> </a>
