changes type on overlay project date

--- a/index.html
+++ b/index.html
@@ -109,12 +109,13 @@
                   <h3 class="overlay-description">
                     Dog Enrichment Playgrounds
                   </h3>
-                  <h4 class="overlay-description">2024</h4>
+                  <p class="overlay-description">2024</p>
 
                   <ul class="project-category-list">
                     <li class="project-stella-category">Branding</li>
                     <li class="project-stella-category">Social Media</li>
                     <li class="project-stella-category">Experiential</li>
+                    <li class="project-stella-category">Illustration</li>
                   </ul>
                 </div>
               </a>
@@ -132,7 +133,7 @@
                   <h3 class="overlay-description">
                     Music Discovery Platform Amplifying Gender Equity
                   </h3>
-                  <h4 class="overlay-description">2024</h4>
+                  <p class="overlay-description">2024</p>
                   <ul class="project-category-list">
                     <li class="project-stella-category">Branding</li>
                     <li class="project-stella-category">Editorial</li>
@@ -152,10 +153,11 @@
                 <div class="overlay">
                   <h1 class="overlay-title">Field Fable</h1>
                   <h3 class="overlay-description">Enchanting Craft Brewery</h3>
-                  <h4 class="overlay-description">2024</h4>
+                  <p class="overlay-description">2024</p>
                   <ul class="project-category-list">
                     <li class="project-stella-category">Branding</li>
                     <li class="project-stella-category">Packaging</li>
+                    <li class="project-stella-category">Illustration</li>
                   </ul>
                 </div>
               </a>
@@ -173,7 +175,7 @@
                   <h3 class="overlay-description">
                     Low-Impact Camping Gear Company
                   </h3>
-                  <h4 class="overlay-description">2024</h4>
+                  <p class="overlay-description">2024</p>
                   <ul class="project-category-list">
                     <li class="project-stella-category">Packaging</li>
                     <li class="project-stella-category">Editorial</li>
@@ -195,7 +197,7 @@
                   <h3 class="overlay-description">
                     Fictional Artist's Album Rollout
                   </h3>
-                  <h4 class="overlay-description">2023</h4>
+                  <p class="overlay-description">2023</p>
                   <ul class="project-category-list">
                     <li class="project-stella-category">Branding</li>
                     <li class="project-stella-category">Album Design</li>
@@ -217,7 +219,7 @@
                   <h3 class="overlay-description">
                     Playful Sun Protection App
                   </h3>
-                  <h4 class="overlay-description">2023</h4>
+                  <p class="overlay-description">2023</p>
                   <ul class="project-category-list">
                     <li class="project-stella-category">Branding</li>
                     <li class="project-stella-category">Interactive</li>
@@ -238,7 +240,7 @@
         </a>
       </h3>
 
-      <h4>&copy;2025-2026 Lauren Howard. All Rights Reserved.</h4>
+      <h4>&copy;2025-2026 by Lauren Howard</h4>
     </footer>
   </body>
 </html>
