--- a/project-page-3.html
+++ b/project-page-3.html
@@ -214,7 +214,7 @@
         </a>
       </h3>
 
-      <h4>&copy;2025-2026 Lauren Howard. All Rights Reserved.</h4>
+      <h4>&copy;2025-2026 by Lauren Howard</h4>
     </footer>
   </body>
 </html>
