--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@
     <link rel="stylesheet" href="./styles/style.css" />
   </head>
 
-  <body class="project-1">
+  <body class="field-fable">
     <div class="project-wrapper">
       <!-- Sidebar -->
       <aside class="project-aside">
