--- a/illustration.html
+++ b/illustration.html
@@ -24,7 +24,7 @@
     <link rel="stylesheet" href="./styles/style.css" />
   </head>
 
-  <body class="project-1">
+  <body class="field-fable">
     <div class="project-wrapper">
       <aside class="project-aside">
         <ul class="branding-navigation">
