--- a/project-page-1 copy.html
+++ b/project-page-1 copy.html
@@ -24,7 +24,7 @@
     <link rel="stylesheet" href="./styles/style.css" />
   </head>
 
-  <body class="project-1">
+  <body class="field-fable">
     <div class="project-wrapper">
       <aside class="project-aside">
         <ul class="branding-navigation">
@@ -169,7 +169,7 @@
             <li class="project-page-grid-item">
               <figure>
                 <img
-                  src="assets/project-1/lauren-howard-field-fable-logo.jpg"
+                  src="assets/field-fable/lauren-howard-field-fable-logo.jpg"
                   alt="Field Fable logo."
                 />
               </figure>
@@ -177,7 +177,7 @@
             <li class="project-page-grid-item">
               <figure>
                 <img
-                  src="assets/project-1/lauren-howard-field-fable-brand-colour-type-logo-varients.jpg"
+                  src="assets/field-fable/lauren-howard-field-fable-brand-colour-type-logo-varients.jpg"
                   alt="Field Fable brief brand guide."
                 />
               </figure>
@@ -187,7 +187,7 @@
             <li class="project-page-grid-item">
               <figure>
                 <img
-                  src="assets/project-1/lauren-howard-field-fable-pale-ale-packaging-design.jpg"
+                  src="assets/field-fable/lauren-howard-field-fable-pale-ale-packaging-design.jpg"
                   alt="Field Fable logo design"
                 />
               </figure>
@@ -197,7 +197,7 @@
             <li class="project-page-grid-item">
               <figure>
                 <img
-                  src="assets/project-1/lauren-howard-field-fable-pale-ale-illustration.jpg"
+                  src="assets/field-fable/lauren-howard-field-fable-pale-ale-illustration.jpg"
                   alt="Huckleberry Sprucetip flavour varient spot illustration."
                 />
               </figure>
@@ -205,7 +205,7 @@
             <li class="project-page-grid-item">
               <figure>
                 <img
-                  src="assets/project-1/lauren-howard-field-fable-bottle-neck.jpg"
+                  src="assets/field-fable/lauren-howard-field-fable-bottle-neck.jpg"
                   alt="Salmonberry Mint flavour varient spot illustration."
                 />
               </figure>
@@ -215,7 +215,7 @@
             <li class="project-page-grid-item">
               <figure>
                 <img
-                  src="assets/project-1/lauren-howard-field-fable-growler-refill-tag.jpg"
+                  src="assets/field-fable/lauren-howard-field-fable-growler-refill-tag.jpg"
                   alt="Field Fable refillable growler design with growler tag."
                 />
               </figure>
@@ -225,7 +225,7 @@
             <li class="project-page-grid-item">
               <figure>
                 <img
-                  src="assets/project-1/lauren-howard-field-fable-salmonberry-mint-spot-illustration.jpg"
+                  src="assets/field-fable/lauren-howard-field-fable-salmonberry-mint-spot-illustration.jpg"
                   alt="Field Fable pale ale packaging design."
                 />
               </figure>
@@ -233,7 +233,7 @@
             <li class="project-page-grid-item">
               <figure>
                 <img
-                  src="assets/project-1/lauren-howard-field-fable-blackberry-cedar-spot-illustration.jpg"
+                  src="assets/field-fable/lauren-howard-field-fable-blackberry-cedar-spot-illustration.jpg"
                   alt="Field Fable pale ale packaging design."
                 />
               </figure>
