--- a/project-page-1.html
+++ b/project-page-1.html
@@ -24,7 +24,7 @@
     <link rel="stylesheet" href="./styles/style.css" />
   </head>
 
-  <body class="project-1">
+  <body class="field-fable">
     <div class="project-wrapper">
       <aside class="project-aside">
         <ul class="branding-navigation">
@@ -124,7 +124,7 @@
             <li class="project-page-grid-item">
               <figure>
                 <img
-                  src="assets/project 4/lauren-howard-wag-and-wander-logo-variants.jpg"
+                  src="assets/wag-and-wander/lauren-howard-wag-and-wander-design-experiential-dog-playground-brandguide.jpg"
                   alt="Logo design for Wag & Wander"
                 />
               </figure>
@@ -134,7 +134,7 @@
             <li class="project-page-grid-item">
               <figure>
                 <img
-                  src="assets/project 4/lauren-howard-wag-and-wander-park-signage.jpg"
+                  src="assets/wag-and-wander/lauren-howard-wag-and-wander-park-signage.jpg"
                   alt="Wag & Wander's Pup Playground signage."
                 />
               </figure>
@@ -144,7 +144,7 @@
             <li class="project-page-grid-item">
               <figure>
                 <img
-                  src="assets/project 4/lauren-howard-wag-and-wander-signage-flirt-pole-mockup.jpg"
+                  src="assets/wag-and-wander/lauren-howard-wag-and-wander-signage-flirt-pole-mockup.jpg"
                   alt="Wag & Wanders Pup Playground park equipment signage for the Firt Pole"
                 />
               </figure>
@@ -160,7 +160,7 @@
             <li class="project-page-grid-item">
               <figure>
                 <img
-                  src="assets/project 4/lauren-howard-wag-and-wander-signage-aframe-mockup.jpg"
+                  src="assets/wag-and-wander/lauren-howard-wag-and-wander-signage-aframe-mockup.jpg"
                   alt="Wag & Wanders Pup Playground park equipment signage for the A-Frame."
                 />
               </figure>
@@ -178,7 +178,7 @@
             <li class="project-page-grid-item">
               <figure>
                 <img
-                  src="assets/project 4/lauren-howard-wag-and-wander-signage-firt-pole.jpg"
+                  src="assets/wag-and-wander/lauren-howard-wag-and-wander-signage-firt-pole.jpg"
                   alt="Wag & Wanders Pup Playground park equipment signage for the Firt Pole"
                 />
               </figure>
@@ -194,7 +194,7 @@
             <li class="project-page-grid-item">
               <figure>
                 <img
-                  src="assets/project 4/lauren-howard-wag-and-wander-signage-aframe.jpg"
+                  src="assets/wag-and-wander/lauren-howard-wag-and-wander-signage-aframe.jpg"
                   alt="Wag & Wanders Pup Playground park equipment signage for the A-Frame."
                 />
               </figure>
@@ -212,11 +212,11 @@
             <li class="project-page-grid-item">
               <figure>
                 <img
-                  src="assets/project 4/lauren-howard-wag-and-wander-social-media-profile.jpg"
+                  src="assets/wag-and-wander/lauren-howard-wag-and-wander-social-media-profile.jpg"
                   alt="Wag & Wander's social media run by mascots Scout and Trek."
                 />
               </figure>
-              <a href="project-1.html">
+              <a href="field-fable.html">
                 <div class="overlay">
                   <h1 class="overlay-title">Field Fable</h1>
                   <h4 class="overlay-description">Branding / Packaging</h4>
@@ -228,11 +228,11 @@
             <li class="project-page-grid-item">
               <figure>
                 <img
-                  src="assets/project 4/lauren-howard-wag-and-wander.jpg"
+                  src="assets/wag-and-wander/lauren-howard-wag-and-wander.jpg"
                   alt="Tips and tricks for dog owners from Scout and Trek."
                 />
               </figure>
-              <a href="project-1.html">
+              <a href="field-fable.html">
                 <div class="overlay">
                   <h1 class="overlay-title">Field Fable</h1>
                   <h4 class="overlay-description">Branding / Packaging</h4>
