--- a/project-page-2.html
+++ b/project-page-2.html
@@ -24,7 +24,7 @@
     <link rel="stylesheet" href="./styles/style.css" />
   </head>
 
-  <body class="project-1">
+  <body class="field-fable">
     <div class="project-wrapper">
       <aside class="project-aside">
         <ul class="branding-navigation">
@@ -119,7 +119,7 @@
           <ul class="grid">
             <li class="project-page-grid-item">
               <figure>
-                <img src="assets/error-hehe.jpg" alt="Dial is coming soon!" />
+                <img src="assets/dial/error-hehe.jpg" alt="Dial is coming soon!" />
               </figure>
             </li>
           </ul>
