--- a/project-page-4.html
+++ b/project-page-4.html
@@ -24,7 +24,7 @@
     <link rel="stylesheet" href="./styles/style.css" />
   </head>
 
-  <body class="project-1">
+  <body class="field-fable">
     <div class="project-wrapper">
       <aside class="project-aside">
         <ul class="branding-navigation">
@@ -124,7 +124,7 @@
             <li class="project-page-grid-item">
               <figure>
                 <img
-                  src="assets/project 5/lauren-howard-thicketco-field-guide-editorial.jpg"
+                  src="assets/thicket/lauren-howard-thicketco-field-guide-editorial.jpg"
                   alt="Starting a Fire spread of the Thicket Co. field guide."
                 />
               </figure>
@@ -134,7 +134,7 @@
             <li class="project-page-grid-item">
               <figure>
                 <img
-                  src="assets/project 5/lauren-howard-thicketco-field-guide-cover.jpg"
+                  src="assets/thicket/lauren-howard-thicketco-field-guide-cover.jpg"
                   alt="Front and back covers of the Thicket Co. field guide."
                 />
               </figure>
@@ -150,7 +150,7 @@
             <li class="project-page-grid-item">
               <figure>
                 <img
-                  src="assets/project 5/lauren-howard-thicketco-illustration-packaging.jpg"
+                  src="assets/thicket/lauren-howard-thicketco-illustration-packaging.jpg"
                   alt="Brand illustration assets for Thicket Co."
                 />
               </figure>
@@ -168,11 +168,11 @@
             <li class="project-page-grid-item">
               <figure>
                 <img
-                  src="assets/project 5/lauren-howard-thicketco-packaging-survivalist-camping-kit.jpg"
+                  src="assets/thicket/lauren-howard-thicketco-packaging-survivalist-camping-kit.jpg"
                   alt="The Wilderness Essentials Kit packaging from Thicket Co."
                 />
               </figure>
-              <a href="project-1.html">
+              <a href="field-fable.html">
                 <div class="overlay">
                   <h1 class="overlay-title">Field Fable</h1>
                   <h4 class="overlay-description">Branding / Packaging</h4>
@@ -184,7 +184,7 @@
             <li class="project-page-grid-item">
               <figure>
                 <img
-                  src="assets/project 5/lauren-howard-thicketco-product-photography.jpg"
+                  src="assets/thicket/lauren-howard-thicketco-product-photography.jpg"
                   alt="Product photography for Thicket Co."
                 />
               </figure>
@@ -200,7 +200,7 @@
             <li class="project-page-grid-item">
               <figure>
                 <img
-                  src="assets/project 5/lauren-howard-thicketco-product-photography-the-kit.jpg"
+                  src="assets/thicket/lauren-howard-thicketco-product-photography-the-kit.jpg"
                   alt="Product photography for Thicket Co."
                 />
               </figure>
@@ -218,7 +218,7 @@
             <li class="project-page-grid-item">
               <figure>
                 <img
-                  src="assets/project 5/lauren-howard-thicketco-product-photography-matches.jpg"
+                  src="assets/thicket/lauren-howard-thicketco-product-photography-matches.jpg"
                   alt="Product photography for Thicket Co."
                 />
               </figure>
@@ -234,7 +234,7 @@
             <li class="project-page-grid-item">
               <figure>
                 <img
-                  src="assets/project 5/lauren-howard-product-photography-tarp.jpg"
+                  src="assets/thicket/lauren-howard-product-photography-tarp.jpg"
                   alt="Product photography for Thicket Co."
                 />
               </figure>
