--- a/project-page-5.html
+++ b/project-page-5.html
@@ -24,7 +24,7 @@
     <link rel="stylesheet" href="./styles/style.css" />
   </head>
 
-  <body class="project-1">
+  <body class="field-fable">
     <div class="project-wrapper">
       <aside class="project-aside">
         <ul class="branding-navigation">
@@ -121,7 +121,7 @@
             <li class="project-page-grid-item">
               <figure>
                 <img
-                  src="assets/project 2/lauren-howard-stella-cover-illustration-close-up.jpg"
+                  src="assets/stella/lauren-howard-stella-cover-illustration-close-up.jpg"
                   alt="Shedding cover hero illustration"
                 />
               </figure>
@@ -131,7 +131,7 @@
             <li class="project-page-grid-item">
               <figure>
                 <img
-                  src="assets/project 2/lauren-howard-stella-album-cover-design-interior-exterior.jpg"
+                  src="assets/stella/lauren-howard-stella-album-cover-design-interior-exterior.jpg"
                   alt="Shedding album cover design."
                 />
               </figure>
@@ -141,7 +141,7 @@
             <li class="project-page-grid-item">
               <figure>
                 <img
-                  src="assets/project 2/lauren-howard-stella-album-sleeve-poster-front-back.jpg"
+                  src="assets/stella/lauren-howard-stella-album-sleeve-poster-front-back.jpg"
                   alt="Describe your project"
                 />
               </figure>
@@ -157,7 +157,7 @@
             <li class="project-page-grid-item">
               <figure>
                 <img
-                  src="assets/project 2/lauren-howard-stella-album-interior-close-up-tracklist.jpg"
+                  src="assets/stella/lauren-howard-stella-album-interior-close-up-tracklist.jpg"
                   alt="Describe your project"
                 />
               </figure>
@@ -175,11 +175,11 @@
             <li class="project-page-grid-item">
               <figure>
                 <img
-                  src="assets/project 2/lauren-howard-stella-colour-type-logo.jpg"
+                  src="assets/stella/lauren-howard-stella-colour-type-logo.jpg"
                   alt="Describe your project"
                 />
               </figure>
-              <a href="project-1.html">
+              <a href="field-fable.html">
                 <div class="overlay">
                   <h1 class="overlay-title">Field Fable</h1>
                   <h4 class="overlay-description">Branding / Packaging</h4>
@@ -191,11 +191,11 @@
             <li class="project-page-grid-item">
               <figure>
                 <img
-                  src="assets/project 2/lauren-howard-stella-tour-merchandise-design-hoodie.jpg"
+                  src="assets/stella/lauren-howard-stella-tour-merchandise-design-hoodie.jpg"
                   alt="Describe your project"
                 />
               </figure>
-              <a href="project-1.html">
+              <a href="field-fable.html">
                 <div class="overlay">
                   <h1 class="overlay-title">Field Fable</h1>
                   <h4 class="overlay-description">Branding / Packaging</h4>
@@ -207,11 +207,11 @@
             <li class="project-page-grid-item">
               <figure>
                 <img
-                  src="assets/project 2/lauren-howard-stella-tour-merchanidse-design-beanie-socks-single.jpg"
+                  src="assets/stella/lauren-howard-stella-tour-merchanidse-design-beanie-socks-single.jpg"
                   alt="Describe your project"
                 />
               </figure>
-              <a href="project-1.html">
+              <a href="field-fable.html">
                 <div class="overlay">
                   <h1 class="overlay-title">Field Fable</h1>
                   <h4 class="overlay-description">Branding / Packaging</h4>
@@ -223,11 +223,11 @@
             <li class="project-page-grid-item">
               <figure>
                 <img
-                  src="assets/project 2/lauren-howard-stella-complete-tour-collection.jpg"
+                  src="assets/stella/lauren-howard-stella-complete-tour-collection.jpg"
                   alt="Describe your project"
                 />
               </figure>
-              <a href="project-1.html">
+              <a href="field-fable.html">
                 <div class="overlay">
                   <h1 class="overlay-title">Field Fable</h1>
                   <h4 class="overlay-description">Branding / Packaging</h4>
