--- a/project-page-6.html
+++ b/project-page-6.html
@@ -24,7 +24,7 @@
     <link rel="stylesheet" href="./styles/style.css" />
   </head>
 
-  <body class="project-1">
+  <body class="field-fable">
     <div class="project-wrapper">
       <aside class="project-aside">
         <ul class="branding-navigation">
@@ -120,7 +120,7 @@
             <li class="project-page-grid-item">
               <figure>
                 <img
-                  src="assets/project 6/lauren-howard-sunbud-meet-the-sunbuds-choose-your-character.jpg"
+                  src="assets/subud/lauren-howard-sunbud-meet-the-sunbuds-choose-your-character.jpg"
                   alt="Choose your Sunbud!"
                 />
               </figure>
@@ -130,7 +130,7 @@
             <li class="project-page-grid-item">
               <figure>
                 <img
-                  src="assets/project 6/lauren-howard-sunbud-colour-type.jpg"
+                  src="assets/subud/lauren-howard-sunbud-colour-type.jpg"
                   alt="Sunbud brand colours and type!"
                 />
               </figure>
@@ -140,7 +140,7 @@
             <li class="project-page-grid-item">
               <figure>
                 <img
-                  src="assets/project 6/lauren-howard-sunbud-sun-protection-app-onboarding.jpg"
+                  src="assets/subud/lauren-howard-sunbud-sun-protection-app-onboarding.jpg"
                   alt="Sunbud onboarding page."
                 />
               </figure>
@@ -150,7 +150,7 @@
             <li class="project-page-grid-item">
               <figure>
                 <img
-                  src="assets/project 6/lauren-howard-sunbud-sunprotection-tracker-page.jpg"
+                  src="assets/subud/lauren-howard-sunbud-sunprotection-tracker-page.jpg"
                   alt="Track your sun protection."
                 />
               </figure>
@@ -160,7 +160,7 @@
             <li class="project-page-grid-item">
               <figure>
                 <img
-                  src="assets/project 6/lauren-howard-sunbud-weather-page-forcast.jpg"
+                  src="assets/subud/lauren-howard-sunbud-weather-page-forcast.jpg"
                   alt="Choose your Sunbud!"
                 />
               </figure>
@@ -170,7 +170,7 @@
             <li class="project-page-grid-item">
               <figure>
                 <img
-                  src="assets/project 6/lauren-howard-sunbud-mini-game-icons-sunprotection.jpg"
+                  src="assets/subud/lauren-howard-sunbud-mini-game-icons-sunprotection.jpg"
                   alt="Describe your project"
                 />
               </figure>
@@ -186,7 +186,7 @@
             <li class="project-page-grid-item">
               <figure>
                 <img
-                  src="assets/project 6/lauren-howard-sunbud-character-design-varients.jpg"
+                  src="assets/subud/lauren-howard-sunbud-character-design-varients.jpg"
                   alt="Describe your project"
                 />
               </figure>
@@ -204,7 +204,7 @@
             <li class="project-page-grid-item">
               <figure>
                 <img
-                  src="assets/project 6/lauren-howard-sunbud-mini-game-page-sunprotection.jpg"
+                  src="assets/subud/lauren-howard-sunbud-mini-game-page-sunprotection.jpg"
                   alt="Choose your Sunbud!"
                 />
               </figure>
