--- a/project-page-3.html
+++ b/project-page-3.html
@@ -24,7 +24,7 @@
     <link rel="stylesheet" href="./styles/style.css" />
   </head>
 
-  <body class="project-1">
+  <body class="field-fable">
     <div class="project-wrapper">
       <aside class="project-aside">
         <ul class="branding-navigation">
@@ -119,7 +119,7 @@
             <li class="project-page-grid-item">
               <figure>
                 <img
-                  src="assets/project-1/lauren-howard-field-fable-logo.png"
+                  src="assets/field-fable/lauren-howard-field-fable-logo.png"
                   alt="Field Fable logo."
                 />
               </figure>
@@ -127,7 +127,7 @@
             <li class="project-page-grid-item">
               <figure>
                 <img
-                  src="assets/project-1/lauren-howard-field-fable-brand-colour-type-logo-varients.jpg"
+                  src="assets/field-fable/lauren-howard-field-fable-brand-colour-type-logo-varients.jpg"
                   alt="Field Fable brief brand guide."
                 />
               </figure>
@@ -137,7 +137,7 @@
             <li class="project-page-grid-item">
               <figure>
                 <img
-                  src="assets/project-1/lauren-howard-field-fable-pale-ale-packaging-design.jpg"
+                  src="assets/field-fable/lauren-howard-field-fable-pale-ale-packaging-design.jpg"
                   alt="Field Fable logo design"
                 />
               </figure>
@@ -147,7 +147,7 @@
             <li class="project-page-grid-item">
               <figure>
                 <img
-                  src="assets/project-1/lauren-howard-field-fable-pale-ale-illustration.jpg"
+                  src="assets/field-fable/lauren-howard-field-fable-pale-ale-illustration.jpg"
                   alt="Huckleberry Sprucetip flavour varient spot illustration."
                 />
               </figure>
@@ -155,7 +155,7 @@
             <li class="project-page-grid-item">
               <figure>
                 <img
-                  src="assets/project-1/lauren-howard-field-fable-bottle-neck.jpg"
+                  src="assets/field-fable/lauren-howard-field-fable-bottle-neck.jpg"
                   alt="Salmonberry Mint flavour varient spot illustration."
                 />
               </figure>
@@ -165,7 +165,7 @@
             <li class="project-page-grid-item">
               <figure>
                 <img
-                  src="assets/project-1/lauren-howard-field-fable-growler-refill-tag.jpg"
+                  src="assets/field-fable/lauren-howard-field-fable-growler-refill-tag.jpg"
                   alt="Field Fable refillable growler design with growler tag."
                 />
               </figure>
@@ -175,7 +175,7 @@
             <li class="project-page-grid-item">
               <figure>
                 <img
-                  src="assets/project-1/lauren-howard-field-fable-salmonberry-mint-spot-illustration.jpg"
+                  src="assets/field-fable/lauren-howard-field-fable-salmonberry-mint-spot-illustration.jpg"
                   alt="Field Fable pale ale packaging design."
                 />
               </figure>
@@ -183,7 +183,7 @@
             <li class="project-page-grid-item">
               <figure>
                 <img
-                  src="assets/project-1/lauren-howard-field-fable-blackberry-cedar-spot-illustration.jpg"
+                  src="assets/field-fable/lauren-howard-field-fable-blackberry-cedar-spot-illustration.jpg"
                   alt="Field Fable pale ale packaging design."
                 />
               </figure>
