--- a/project-page-3.html
+++ b/project-page-3.html
@@ -119,7 +119,7 @@
             <li class="project-page-grid-item">
               <figure>
                 <img
-                  src="assets/field-fable/lauren-howard-field-fable-logo.png"
+                  src="assets/field-fable/lauren-howard-field-fable-logo.jpg"
                   alt="Field Fable logo."
                 />
               </figure>
