--- a/project-page-1.html
+++ b/project-page-1.html
@@ -168,7 +168,7 @@
                 <div class="overlay">
                   <h1 class="overlay-title">Wag & Wander</h1>
                   <h4 class="overlay-description">
-                    Branding / Social Media / Experiential Design
+                    Branding, Social Media, Experiential Design
                   </h4>
                 </div>
               </a>
