--- a/project-page-4.html
+++ b/project-page-4.html
@@ -158,7 +158,7 @@
                 <div class="overlay">
                   <h1 class="overlay-title">Dial</h1>
                   <h4 class="overlay-description">
-                    Branding / Editorial / Social Media
+                    Branding, Editorial, Social Media
                   </h4>
                 </div>
               </a>
