--- a/project-page-5.html
+++ b/project-page-5.html
@@ -97,8 +97,8 @@
           <div class="project-row">
             <div class="project-title">
               <h1>Stella</h1>
-              <h2>Branding / Album Design / Merchandise</h2>
-              <p>Mentor project with Mathew Johnson</p>
+              <h2>Branding, Album Design, Merchandise</h2>
+              <p>Special thanks to Matthew Johnson for his invaluable mentorship on this project.</p>
             </div>
             <div class="project-description">
               <p>
