--- a/project-page-6.html
+++ b/project-page-6.html
@@ -97,7 +97,7 @@
           <div class="project-row">
             <div class="project-title">
               <h1>SunBud</h1>
-              <h2>Branding / Interactive / Character Design</h2>
+              <h2>Branding, Interactive, Character Design</h2>
             </div>
             <div class="project-description">
               <p>
@@ -178,7 +178,7 @@
                 <div class="overlay">
                   <h1 class="overlay-title">Stella</h1>
                   <h4 class="overlay-description">
-                    Branding / Album Design / Merchandise
+                    Branding, Album Design, Merchandise
                   </h4>
                 </div>
               </a>
