--- a/project-page-2.html
+++ b/project-page-2.html
@@ -97,7 +97,7 @@
           <div class="project-row">
             <div class="project-title">
               <h1>Dial</h1>
-              <h2>Branding / Editorial / Social Media</h2>
+              <h2>Branding, Editorial, Social Media</h2>
             </div>
             <div class="project-description">
               <p>
