--- a/project-page-3.html
+++ b/project-page-3.html
@@ -97,7 +97,7 @@
           <div class="project-row">
             <div class="project-title">
               <h1>Field Fable</h1>
-              <h2>Branding / Packaging / Illustration</h2>
+              <h2>Branding, Packaging, Illustration</h2>
             </div>
             <div class="project-description">
               <p>
